# nwd-dataquery

./: .gitignore  CHANGELOG.md  LICENSE  README.md  prek.toml  pyproject.toml
.github/workflows/: ci.yml  nightly.yml  release.yml
src/nwd_dataquery/: __init__.py  _parse.py  _results.py  _time.py  cli.py  client.py  errors.py
tests/: conftest.py  test_cli.py  test_client.py  test_errors.py  test_integration.py  test_live.py  test_metadata_result.py  test_parse.py  test_public_api.py  test_query_result.py  test_typing.py  test_warnings_dual_channel.py  typing_check.py
tests/cassettes/test_integration/: test_integration_describe_returns_metadata.yaml  test_integration_fetch_lwsc_elevation.yaml
tests/fixtures/: multi.json  single.json
