[project]
name = "nwd-dataquery"
version = "0.1.0"
description = "Async Python client for the USACE NWD Dataquery 2.0 hydrologic timeseries endpoint."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Brian Connelly", email = "bdc@bconnelly.net" }]
keywords = ["usace", "hydrology", "water", "timeseries", "dataquery"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "aia-chaser>=3.4.0",
    "httpx>=0.28.1",
    "pyarrow>=23.0.1",
    "typer>=0.24.1",
]

[project.optional-dependencies]
polars = ["polars>=1.0"]
pandas = ["pandas>=2.0"]

[project.scripts]
nwd-dq = "nwd_dataquery.cli:app"

[project.urls]
Homepage = "https://github.com/briandconnelly/nwd-dataquery"
Issues = "https://github.com/briandconnelly/nwd-dataquery/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nwd_dataquery"]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pandas>=3.0.2",
    "pdoc>=16.0.0",
    "polars>=1.40.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-recording>=0.13.4",
    "ruff>=0.15.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: hits the real USACE endpoint (nightly only)",
]
addopts = "-m 'not live' --cov=nwd_dataquery --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # simplify
    "C4",   # comprehensions
    "RUF",  # ruff-specific
]
ignore = ["E501"]  # line-length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # allow `assert` in tests
